# Corrosion

./: .gitignore  Cargo.toml  build.rs
src/client/: client.rs
src/injector/: libinjector.rs  loader.rs
